# xia-gao

./: .gitignore  DESIGN.md  LICENSE  README.md  SKILL.md  pyproject.toml  xia-gao.md
.claude-skill/: README.md  SKILL.md  config.json
.claude-skill/runtime/: deployments.json
docker/: base.Dockerfile  compose.template.yaml  node.Dockerfile  python.Dockerfile
src/xia_gao/: __init__.py  analyzer.py  cleaner.py  cli.py  config.py  executor.py  health.py  isolator.py  logger.py  repair.py
tests/: __init__.py  test_analyzer.py  test_cleaner.py  test_health.py  test_isolator.py  test_repair.py
tests/fixtures/simple-node/: package.json  server.js
tests/fixtures/simple-python/: app.py
xia-gao-skill/: README.md  config.json
