[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xia-gao"
version = "0.1.0"
description = "一键安全部署 GitHub 项目到隔离沙箱"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Xia-Gao Contributors"}
]
keywords = ["deployment", "docker", "github", "sandbox", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
xia-gao = "xia_gao.cli:main"
xg = "xia_gao.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/xia-gao"
Repository = "https://github.com/YOUR_USERNAME/xia-gao"
Issues = "https://github.com/YOUR_USERNAME/xia-gao/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xia_gao"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
